# GraspDataProcessing

./: .gitignore  ANN.py  CLAUDE.md  INSTALL.md  README.md  check_installation.py  pyproject.toml  requirements-cpu.txt  requirements-gpu.txt  requirements.txt
GraspDataProcessing/: ASF_data_collection.py  __init__.py  data_IO.py  fig_settings.py  level_fig_chart.py  radial_wavefunction_plot.py  tool_function.py  transition_data_collection.py  version.py
GraspDataProcessing/tests/: read_level.py  read_lsj_transition_data.py  read_mix_coef_file.py  read_radial_wavefunction.py  read_transition_data.py
ml_CSFs_selection_scripts/: common_functions.sh  csfs_ml_choosing_config_load.py  disks  grasp_dual_generator.html  run_script.sh
ml_CSFs_selection_scripts/html_config/: comp-0-2_Gd_I.json  ws2_Gd_I_odd2.json  (+1 more)
modify_logs/: absolute_path_fix_20250713.md  backward_loop_mechanism_20250730.md  config_script_generator_improvements_20250713.md  cpp_descriptor_integration_20250817.md  csf_coverage_validator_integration_20250811.md  expansion_logic_completion_summary.md  expansion_logic_final_verification.md  fix_batchnorm_error_20250713.md  html_generator_complete_sync_20250713.md  html_generator_log_optimization_20250113.md  html_generator_step_control_sync_20250713.md  log_format_improvements_summary.md  logger_refactoring_20250713.md  python_shebang_fix_20250713.md  run_script_absolute_paths_20250713.md  run_script_critical_fixes_20250113.md  session_completion_summary.md  shell_redirect_optimization_20250113.md  step_level_checkpoint_restart_20250713.md  toml_library_migration_20250731.md  日志优化总结.md
pyscript/: debug_ann_batchnorm.py  read_lsj_transition_data.py  read_mix_coef_file.py  read_transition_data.py  test_pytorch_threads.py
scripts/: HTML脚本文件检查问题修复总结.md  README.md  README_脚本生成器.md  README_配置生成器网页.md  basic_script_generator.py  chinese_replacement_map.txt  common_functions.sh  config.toml  config_class_generator.py  csfs_choosing_SCF_cal_ml_choosing_fixed_v2.sh  csfs_ml_choosing_config_load.py  disks  example_usage.py  fixed_file_check_script.sh  generate_calculation_scripts.py  get_config_value  grasp_config_generator.html  grasp_dual_generator.html  grasp_tools.py  grasp_with_memory_monitor.sh  install_tools.py  memory_monitor_example.sh  mkdisks  run_script.sh  setup_global_scripts.py  simple_config_generator.html  simple_memory_functions.sh  simple_script_generator.py  slurm_memory_monitor_example.sh  step_control_usage_guide.md  test_array_split.sh  zsh数组分割问题最终解决方案.md  使用总结.md  内存监控使用说明.md
tests/: ANN.py  README_debug.md  README_mkdisks_config.md  README_pytorch_threads.md  ann3_proba.py  ann3_proba_refactored.py  choosing_csfs.py  config.toml  config.yaml  convert_old_models.py  debug_ann_batchnorm.py  graspinp.py  initial_csfs.py  mlci_rf.py  read_level.py  read_lsj_transition_data.py  read_mix_coef_file.py  read_radial_wavefunction.py  read_transition_data.py  readci.ipynb  run_test copy.ipynb  run_test.ipynb  runtime_fix_batchnorm.py  test.sh  test.xlsx  test_mkdisks_config.py  test_pytorch_threads.py  train.py  train_force_fix.py  train_with_fix.py  vmcci.py  使用说明_拆分程序.md  使用说明_能级收敛检查.md
(+98 files in other folders)
