[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grasp-data-processing"
version = "1.1.5"
description = "Grasp Data processing package"

requires-python = ">= 3.8"

dependencies = [
  "matplotlib",
  "numpy",
  "pandas",
  "tqdm",
]

readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name="Yi(Yenoch) Qin", email="yenochqin@hotmail.com" }
]

classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 4 - Beta",

  # Specify the Python versions you support here.
  "Programming Language :: Python",
]

[tool.hatch.build.targets.wheel]
packages = ["src/graspdataprocessing"]

[project.urls]
Homepage = "https://github.com/YenochQin/graspdataprocessing"