[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grasp-data-processing"
version = '2.2.dev2'
# version = '2.2.1'
description = "Grasp Data processing package"

requires-python = ">= 3.12"

dependencies = [
  "matplotlib",
  "numpy>=2.0.0",
  "pandas",
  "tqdm",
]

[tool.hatch.version]
path = "src/version.py"

readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name="Yi(Yenoch) Qin", email="yenochqin@hotmail.com" }
]

classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  # "Development Status :: 5 - Production/Stable",
  "Development Status :: 4 - Beta",

  # Specify the Python versions you support here.
  "Programming Language :: Python",
]

[tool.hatch.build.targets.wheel]
packages = ["src/graspdataprocessing"]

[tool.ruff.lint]
select = ["NPY201"]

[project.urls]
Homepage = "https://github.com/YenochQin/graspdataprocessing"