[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grasp-data-processing"
version = '2.5.dev1'
# version = '2.2.6'
description = "Grasp Data processing package"

requires-python = ">= 3.12"

dependencies = [
  # 核心数据处理库
  "numpy>=2.0.0",
  "pandas>=2.2.2", 
  "matplotlib>=3.8.4",
  "tqdm>=4.66.4",
  
  # 机器学习库
  "torch>=2.0.0",
  "scikit-learn>=1.3.0",
  "imbalanced-learn>=0.11.0",
  
  # 数据可视化
  "seaborn>=0.11.0",
  
  # 模型序列化和工具
  "joblib>=1.1.0",
  
  # 表格格式化
  "tabulate>=0.8.9",
  
  # 位数组处理 (可选)
  "bitarray>=2.0.0",
  
  # 配置文件处理
  "pyyaml>=6.0",
  "rtoml>=0.9.0",
]

[tool.hatch.version]
path = "src/version.py"

readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name="Yi(Yenoch) Qin", email="yenochqin@hotmail.com" }
]

classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  # "Development Status :: 5 - Production/Stable",
  "Development Status :: 4 - Beta",

  # Specify the Python versions you support here.
  "Programming Language :: Python",
]

[tool.hatch.build.targets.wheel]
packages = ["src/graspdataprocessing"]

[tool.ruff.lint]
select = ["NPY201"]

[project.urls]
Homepage = "https://github.com/YenochQin/graspdataprocessing"